2018-07-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mvg.c (ReadMVGImage): Fix memory leak added on
	2018-07-21.  Fixes oss-fuzz 9548 "graphicsmagick/coder_MVG_fuzzer:
	Direct-leak in CloneDrawInfo". (Credit to OSS-Fuzz)

2018-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/cineon.c (ReadCINEONImage): Fix SourceForge issue 571
	"Unexpected hang on a crafted Cineon image" by detecting and
	quitting on EOF appropriately, and verifying that file size is
	sufficient for claimed pixel dimensions when possible.

	* fuzzing/oss-fuzz-build.sh, fuzzing/dictionaries/MVG.dict: Added
	MVG fuzzing dictionary by Alex Gaynor.

2018-07-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (SetNexus): For requests one pixel tall,
	SetNexus() was wrongly using pixels in-core rather than using a
	staging area for the case where the nexus rows extend beyond the
	image raster boundary, leading to heap overflow.  This can happen
	when virtual pixels outside the image bounds are accessed.  Fixes
	oss-fuzz 9512 "graphicsmagick/graphicsmagick_coder_MVG_fuzzer:
	Heap-buffer-overflow in AcquireCacheNexus". (Credit to OSS-Fuzz)

	* magick/render.c (ExtractTokensBetweenPushPop):
	ExtractTokensBetweenPushPop() needs to always return a valid
	pointer into the primitive string.  Fixes oss-fuzz 9511
	"graphicsmagick/graphicsmagick_coder_MVG_fuzzer: Null-dereference
	READ in DrawImage". (Credit to OSS-Fuzz)
	(DrawPolygonPrimitive): Fix leak of polygon set when object is
	completely outside image.  Fixes oss-fuzz 9513
	"graphicsmagick/graphicsmagick_coder_MVG_fuzzer: Direct-leak in
	AllocateThreadViewDataSet". (Credit to OSS-Fuzz)

2018-07-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (FileToBlob): Use confirm access APIs to verify
	that read access to this path is allowed by policy.  Check that
	file is a regular file before proceeding to open and read from it.
